--- a/style.css
+++ b/style.css
@@ -917,8 +917,8 @@ section.chartintro {
   }
   section.chartintro img {
     justify-content: center;
-    width: 100%; /* Adjust as needed */
-    height: 100%; /* Adjust as needed */
+    width: 104%; /* Adjust as needed */
+    height: auto; /* Adjust as needed */
     margin-left:0%;
   
   }
@@ -963,7 +963,7 @@ section.chartintro {
     margin-bottom: 20px;
   }
   .chart {
-    width: 100%;
+    width: 104%;
     height: 400px; /* Adjust height as needed */
     background: url('img/chart.png') no-repeat center center;
     background-size: contain; /* Adjust background size as needed */
@@ -972,8 +972,8 @@ section.chartintro {
     
   .background img {
     justify-content: center;
-    width: 102%; /* Adjust as needed */
-    height: 102%; /* Adjust as needed */
+    width: 110%; /* Adjust as needed */
+    height: 110%; /* Adjust as needed */
     margin-left:0%;
 }
 /*CHART1*/
@@ -991,8 +991,8 @@ section.chartintro {
         
         .backgroundmade img {
                 justify-content: center;
-                width: 102%; /* Adjust as needed */
-                height: 102%; /* Adjust as needed */
+                width: 104%; /* Adjust as needed */
+                height: 104%; /* Adjust as needed */
                 margin-left:0%;
         }
 /*WHYMADE?*/
@@ -1006,8 +1006,8 @@ section.chartintro {
         }
         .why img {
             justify-content: center;
-            width: 102%; /* Adjust as needed */
-            height: 102%; /* Adjust as needed */
+            width: 104%; /* Adjust as needed */
+            height: 104%; /* Adjust as needed */
             margin-left:0%;
     }
         .why .image-with-text {
@@ -1060,7 +1060,7 @@ section.chartintro {
        /
         }
         .persona img{
-            width:100%;
+            width:115%;
             height: auto;
             margin-left:0%;
         }
@@ -1091,7 +1091,7 @@ section.chartintro {
             pointer-events: auto; /* Enable interaction */
         }
         .hirophone img{
-            width:100%;
+            width:115%;
             height: auto;
             margin-left: 0%;
             margin-bottom:-10px;
@@ -1103,8 +1103,8 @@ section.chartintro {
             margin-left: 0%;
         }
         .section.design {
-            width: 110%;
-            height: 110%;
+            width: 115%;
+            height: 115%;
             left: 0;
             transition: transform 6.0s ease; /* Smooth transition for movement */
             opacity: 1; /* Initially visible */
