--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ body {
         margin-top: -20px;
         width: auto;
         height: 3800px; /* Adjust height as needed */
-        background-image: url('img/bgorange.png');
+        background-color:orange;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -259,7 +259,7 @@ body {
         z-index: 0; /* Lower z-index than .section.main when scaled up */
     }
     .timeline ul {
-        background-image: url('img/bgorange.png');
+        background-color:orange;
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -314,13 +314,13 @@ body {
         left: 5%; /* Adjust the left position */
     }
     .timeline ul li:nth-child(odd) div {
-        left: -439px; /* Moved to the left */
+        left: -623px; /* Moved to the left */
         text-align: left; /* Align text to the left */
         z-index: 2;
     }
     .timeline ul li:nth-child(even) div {
         left: auto; /* Reset left to default */
-        right: 45px; /* Moved to the right */
+        right: -200px; /* Moved to the right */
         text-align: right; /* Align text to the right */
         z-index: 2;
     }
@@ -331,10 +331,10 @@ body {
         transition: all 0.5s ease-in-out;
     }
     .timeline ul li:nth-child(odd) div {
-        transform: translate3d(-400px, 0, 0); /* Adjusted transform direction */
+        transform: translate3d(-800px, 0, 0); /* Adjusted transform direction */
     }
     .timeline ul li:nth-child(even) div {
-        transform: translate3d(200px, 0, 0); /* Adjusted transform direction */
+        transform: translate3d(800px, 0, 0); /* Adjusted transform direction */
     }
     .timeline ul li.in-view div {
         transform: none;
